CAMEL-23167 - Camel-jbang-mcp - Extract static reference data from tools into MCP Resources
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>