@@ -16,13 +16,15 @@
  */
 package org.apache.camel.dsl.jbang.core.commands.mcp;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 import jakarta.enterprise.context.ApplicationScoped;
+
+import org.apache.camel.util.json.JsonArray;
+import org.apache.camel.util.json.JsonObject;
 
 /**
  * Shared holder for Camel exception diagnostic reference data used by both {@link DiagnoseTools} (MCP Tool) and
@@ -34,10 +36,10 @@ import jakarta.enterprise.context.ApplicationScoped;
 @ApplicationScoped
 public class DiagnoseData {
 
-    private static final String CAMEL_DOC_BASE = "https://camel.apache.org/";
-    private static final String CAMEL_COMPONENT_DOC = CAMEL_DOC_BASE + "components/next/";
-    private static final String CAMEL_MANUAL_DOC = CAMEL_DOC_BASE + "manual/";
-    private static final String CAMEL_EIP_DOC = CAMEL_COMPONENT_DOC + "eips/";
+    public static final String CAMEL_DOC_BASE = "https://camel.apache.org/";
+    public static final String CAMEL_COMPONENT_DOC = CAMEL_DOC_BASE + "components/next/";
+    public static final String CAMEL_MANUAL_DOC = CAMEL_DOC_BASE + "manual/";
+    public static final String CAMEL_EIP_DOC = CAMEL_COMPONENT_DOC + "eips/";
 
     private static final Map<String, ExceptionInfo> KNOWN_EXCEPTIONS;
 
@@ -46,296 +48,296 @@ public class DiagnoseData {
 
         exceptions.put("NoSuchEndpointException", new ExceptionInfo(
                 "The specified endpoint URI could not be resolved to any known Camel component.",
-                Arrays.asList(
+                List.of(
                         "Typo in the endpoint URI scheme (e.g., 'kafak:' instead of 'kafka:')",
                         "Missing component dependency in pom.xml or build.gradle",
                         "Component not on the classpath",
                         "Using a component scheme that does not exist"),
-                Arrays.asList(
+                List.of(
                         "Verify the endpoint URI scheme is spelled correctly",
                         "Add the required camel-<component> dependency to your project",
                         "Check available components with 'camel-catalog' or the Camel documentation",
                         "Ensure the component JAR is on the classpath"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "component.html")));
 
         exceptions.put("ResolveEndpointFailedException", new ExceptionInfo(
                 "Failed to resolve or create an endpoint from the given URI. The URI syntax may be invalid or required options may be missing.",
-                Arrays.asList(
+                List.of(
                         "Invalid endpoint URI syntax",
                         "Missing required endpoint options",
                         "Unknown or misspelled endpoint options",
                         "Invalid option values (wrong type or format)",
                         "Special characters in URI not properly encoded"),
-                Arrays.asList(
+                List.of(
                         "Check the endpoint URI syntax against the component documentation",
                         "Ensure all required options are provided",
                         "Verify option names are spelled correctly",
                         "URL-encode special characters in the URI",
                         "Use the endpoint DSL for type-safe endpoint configuration"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "endpoint.html",
                         CAMEL_MANUAL_DOC + "uris.html")));
 
         exceptions.put("FailedToCreateRouteException", new ExceptionInfo(
                 "A route could not be created. This is typically a configuration or wiring issue.",
-                Arrays.asList(
+                List.of(
                         "Invalid endpoint URI in from() or to()",
                         "Missing required component dependency",
                         "Bean reference that cannot be resolved",
                         "Invalid route configuration or DSL syntax",
                         "Circular route dependencies"),
-                Arrays.asList(
+                List.of(
                         "Check the full exception chain for the root cause",
                         "Verify all endpoint URIs in the route are valid",
                         "Ensure all referenced beans are available in the registry",
                         "Validate the route DSL syntax",
                         "Check for missing component dependencies"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "routes.html",
                         CAMEL_MANUAL_DOC + "route-configuration.html")));
 
         exceptions.put("FailedToStartRouteException", new ExceptionInfo(
                 "A route was created but could not be started. This often indicates a connectivity or resource issue.",
-                Arrays.asList(
+                List.of(
                         "Cannot connect to external service (broker, database, etc.)",
                         "Port already in use for server-side components",
                         "Authentication/authorization failure",
                         "Missing or invalid SSL/TLS configuration",
                         "Resource not available (queue, topic, table, etc.)"),
-                Arrays.asList(
+                List.of(
                         "Verify network connectivity to external services",
                         "Check credentials and authentication configuration",
                         "Ensure the target resource exists (queue, topic, etc.)",
                         "Review SSL/TLS configuration if using secure connections",
                         "Check if the port is already in use"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "routes.html",
                         CAMEL_MANUAL_DOC + "lifecycle.html")));
 
         exceptions.put("NoTypeConversionAvailableException", new ExceptionInfo(
                 "Camel could not find a type converter to convert between the required types.",
-                Arrays.asList(
+                List.of(
                         "Trying to convert a message body to an incompatible type",
                         "Missing type converter on the classpath",
                         "Custom type without a registered converter",
                         "Null body when a non-null type is expected"),
-                Arrays.asList(
+                List.of(
                         "Check the source and target types in the conversion",
                         "Add appropriate data format or converter dependency",
                         "Use explicit marshal/unmarshal instead of implicit conversion",
                         "Register a custom TypeConverter if needed",
                         "Check if the message body is null"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "type-converter.html",
                         CAMEL_MANUAL_DOC + "data-format.html")));
 
         exceptions.put("CamelExecutionException", new ExceptionInfo(
                 "A wrapper exception thrown during route execution. The root cause is in the nested exception.",
-                Arrays.asList(
+                List.of(
                         "Exception thrown by a processor or bean in the route",
                         "External service failure (HTTP error, broker disconnect, etc.)",
                         "Data transformation error",
                         "Timeout during synchronous processing"),
-                Arrays.asList(
+                List.of(
                         "Inspect the nested/caused-by exception for the actual error",
                         "Add error handling (onException, errorHandler, doTry/doCatch) to the route",
                         "Check the processor or bean that failed",
                         "Review the full stack trace for the root cause"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "exception-clause.html",
                         CAMEL_MANUAL_DOC + "error-handler.html",
                         CAMEL_MANUAL_DOC + "try-catch-finally.html")));
 
         exceptions.put("ExchangeTimedOutException", new ExceptionInfo(
                 "An exchange did not complete within the configured timeout period.",
-                Arrays.asList(
+                List.of(
                         "Slow downstream service or endpoint",
                         "Network latency or connectivity issues",
                         "Timeout value too low for the operation",
                         "Deadlock or resource contention",
                         "Direct/SEDA consumer not available"),
-                Arrays.asList(
+                List.of(
                         "Increase the timeout value if appropriate",
                         "Add circuit breaker pattern for unreliable services",
                         "Check network connectivity to the target service",
                         "Use async processing for long-running operations",
                         "Add timeout error handling in the route"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "request-reply.html",
                         CAMEL_EIP_DOC + "circuitBreaker-eip.html")));
 
         exceptions.put("DirectConsumerNotAvailableException", new ExceptionInfo(
                 "No consumer is available for a direct endpoint. The direct component requires an active consumer.",
-                Arrays.asList(
+                List.of(
                         "Target route with the direct endpoint is not started",
                         "Typo in the direct endpoint name",
                         "Route with the direct consumer was stopped or removed",
                         "Timing issue during startup — producer route started before consumer route"),
-                Arrays.asList(
+                List.of(
                         "Ensure a route with from(\"direct:name\") exists and is started",
                         "Verify the direct endpoint name matches between producer and consumer",
                         "Use SEDA instead of direct if startup ordering is uncertain",
                         "Configure route startup ordering if needed"),
-                Arrays.asList(
+                List.of(
                         CAMEL_COMPONENT_DOC + "direct-component.html",
                         CAMEL_COMPONENT_DOC + "seda-component.html")));
 
         exceptions.put("CamelExchangeException", new ExceptionInfo(
                 "A general exception related to exchange processing.",
-                Arrays.asList(
+                List.of(
                         "Processor failure during exchange handling",
                         "Invalid exchange pattern (InOnly vs InOut mismatch)",
                         "Missing required headers or properties",
                         "Exchange body cannot be processed"),
-                Arrays.asList(
+                List.of(
                         "Check the exchange pattern matches the endpoint requirements",
                         "Verify required headers are set on the exchange",
                         "Add error handling to catch and process the exception",
                         "Inspect the exchange body type and content"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "exchange.html",
                         CAMEL_MANUAL_DOC + "exchange-pattern.html")));
 
         exceptions.put("InvalidPayloadException", new ExceptionInfo(
                 "The message payload (body) is not of the expected type and cannot be converted.",
-                Arrays.asList(
+                List.of(
                         "Message body is null when a value is expected",
                         "Message body type does not match the expected type",
                         "Missing type converter for the body type",
                         "Upstream processor produced unexpected output"),
-                Arrays.asList(
+                List.of(
                         "Check the message body type before the failing processor",
                         "Use convertBodyTo() to explicitly convert the body type",
                         "Add a null check or default value for the body",
                         "Add the appropriate data format dependency for marshalling/unmarshalling"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "message.html",
                         CAMEL_MANUAL_DOC + "type-converter.html")));
 
         exceptions.put("PropertyBindingException", new ExceptionInfo(
                 "Failed to bind a property or option to a Camel component, endpoint, or bean.",
-                Arrays.asList(
+                List.of(
                         "Property name does not exist on the target object",
                         "Property value has wrong type (e.g., string for a boolean)",
                         "Misspelled property or option name",
                         "Property placeholder could not be resolved"),
-                Arrays.asList(
+                List.of(
                         "Check the property name spelling against the component documentation",
                         "Verify the property value type matches the expected type",
                         "Use property placeholders correctly: {{property.name}}",
                         "Check application.properties or YAML configuration for correct keys"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "using-propertyplaceholder.html",
                         CAMEL_MANUAL_DOC + "component.html")));
 
         exceptions.put("NoSuchBeanException", new ExceptionInfo(
                 "A referenced bean could not be found in the Camel registry.",
-                Arrays.asList(
+                List.of(
                         "Bean not registered in the Spring/CDI/Camel registry",
                         "Typo in the bean name reference",
                         "Bean class not on the classpath",
                         "Missing @Named or @Component annotation on the bean class",
                         "Bean definition not scanned by component scan"),
-                Arrays.asList(
+                List.of(
                         "Verify the bean is registered with the correct name",
                         "Check spelling of the bean reference",
                         "Ensure the bean class has proper annotations (@Named, @Component, etc.)",
                         "Verify component scanning includes the bean's package",
                         "Register the bean manually in RouteBuilder configure() if needed"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "registry.html",
                         CAMEL_MANUAL_DOC + "bean-binding.html")));
 
         exceptions.put("NoSuchHeaderException", new ExceptionInfo(
                 "A required header was not found on the message.",
-                Arrays.asList(
+                List.of(
                         "Header not set by upstream processors",
                         "Header name is misspelled",
                         "Header was removed by a previous processor",
                         "Using wrong header constant name"),
-                Arrays.asList(
+                List.of(
                         "Verify the header name matches what upstream processors set",
                         "Use header constants from the component's class (e.g., KafkaConstants)",
                         "Add a setHeader() before the processor that requires it",
                         "Add a null check or default value for the header"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "message.html")));
 
         exceptions.put("PredicateValidationException", new ExceptionInfo(
                 "A predicate validation failed. This is typically thrown by the validate() DSL or a filter condition.",
-                Arrays.asList(
+                List.of(
                         "Message did not match the expected validation predicate",
                         "Invalid or unexpected message content",
                         "Predicate expression has a syntax error",
                         "Null values in the expression evaluation"),
-                Arrays.asList(
+                List.of(
                         "Review the predicate expression for correctness",
                         "Check the message content matches the expected format",
                         "Add error handling for validation failures",
                         "Use a more lenient predicate or add default values"),
-                Arrays.asList(
+                List.of(
                         CAMEL_EIP_DOC + "validate-eip.html",
                         CAMEL_MANUAL_DOC + "predicate.html")));
 
         exceptions.put("NoSuchLanguageException", new ExceptionInfo(
                 "The specified expression language is not available.",
-                Arrays.asList(
+                List.of(
                         "Missing language dependency (e.g., camel-jsonpath, camel-xpath)",
                         "Typo in the language name",
                         "Using a language that does not exist"),
-                Arrays.asList(
+                List.of(
                         "Add the required camel-<language> dependency",
                         "Verify the language name is spelled correctly",
                         "Use 'simple' language which is included in camel-core"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "languages.html")));
 
         exceptions.put("FailedToCreateConsumerException", new ExceptionInfo(
                 "A consumer could not be created for the endpoint.",
-                Arrays.asList(
+                List.of(
                         "Cannot connect to the source system (broker, server, etc.)",
                         "Invalid consumer configuration options",
                         "Authentication failure",
                         "Missing required consumer options",
                         "Resource does not exist (topic, queue, file path, etc.)"),
-                Arrays.asList(
+                List.of(
                         "Verify connectivity to the source system",
                         "Check the consumer configuration options",
                         "Ensure credentials are correct",
                         "Verify the target resource exists",
                         "Check the full exception chain for the root cause"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "component.html")));
 
         exceptions.put("FailedToCreateProducerException", new ExceptionInfo(
                 "A producer could not be created for the endpoint.",
-                Arrays.asList(
+                List.of(
                         "Cannot connect to the target system",
                         "Invalid producer configuration options",
                         "Authentication failure",
                         "Missing required producer options"),
-                Arrays.asList(
+                List.of(
                         "Verify connectivity to the target system",
                         "Check the producer configuration options",
                         "Ensure credentials are correct",
                         "Check the full exception chain for the root cause"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "component.html")));
 
         exceptions.put("CamelAuthorizationException", new ExceptionInfo(
                 "An authorization check failed. The current identity does not have permission to perform the operation.",
-                Arrays.asList(
+                List.of(
                         "Insufficient permissions for the user or service account",
                         "Missing or expired authentication token",
                         "Security policy denying the operation",
                         "Incorrect RBAC or ACL configuration"),
-                Arrays.asList(
+                List.of(
                         "Check the user/service account permissions",
                         "Verify the authentication token is valid and not expired",
                         "Review the security policies and ACLs",
                         "Ensure the correct security provider is configured"),
-                Arrays.asList(
+                List.of(
                         CAMEL_MANUAL_DOC + "security.html")));
 
         KNOWN_EXCEPTIONS = Collections.unmodifiableMap(exceptions);
@@ -372,5 +374,35 @@ public class DiagnoseData {
             List<String> commonCauses,
             List<String> suggestedFixes,
             List<String> documentationLinks) {
+
+        /**
+         * Convert this exception info to a full JSON object with all fields.
+         */
+        public JsonObject toJson() {
+            JsonObject json = new JsonObject();
+            json.put("description", description);
+            json.put("commonCauses", toJsonArray(commonCauses));
+            json.put("suggestedFixes", toJsonArray(suggestedFixes));
+            json.put("documentationLinks", toJsonArray(documentationLinks));
+            return json;
+        }
+
+        /**
+         * Convert this exception info to a summary JSON object (description and doc links only).
+         */
+        public JsonObject toSummaryJson() {
+            JsonObject json = new JsonObject();
+            json.put("description", description);
+            json.put("documentationLinks", toJsonArray(documentationLinks));
+            return json;
+        }
+
+        private static JsonArray toJsonArray(List<String> items) {
+            JsonArray array = new JsonArray();
+            for (String item : items) {
+                array.add(item);
+            }
+            return array;
+        }
     }
 }
